[gd_scene load_steps=4 format=3 uid="uid://drby7yfu8t38e"]

[ext_resource type="Script" path="res://Scenes/ContentManager/Custom_Editors/Scripts/MobEditor.gd" id="1_ubw0i"]
[ext_resource type="Texture2D" uid="uid://c8ragmxitca47" path="res://Scenes/ContentManager/Mapeditor/Images/emptyTile.png" id="2_woy6i"]
[ext_resource type="PackedScene" uid="uid://d1h1rpwt8f807" path="res://Scenes/ContentManager/Custom_Widgets/Sprite_Selector_Popup.tscn" id="3_847a0"]

[node name="MobEditor" type="Control" node_paths=PackedStringArray("mobImageDisplay", "IDTextLabel", "PathTextLabel", "NameTextEdit", "DescriptionTextEdit", "mobSelector", "melee_damage_numedit", "melee_range_numedit", "health_numedit", "moveSpeed_numedit", "idle_move_speed_numedit", "sightRange_numedit", "senseRange_numedit", "hearingRange_numedit", "ItemGroupTextEdit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubw0i")
mobImageDisplay = NodePath("VBoxContainer/FormGrid/MobImageDisplay")
IDTextLabel = NodePath("VBoxContainer/FormGrid/IDTextLabel")
PathTextLabel = NodePath("VBoxContainer/FormGrid/PathTextLabel")
NameTextEdit = NodePath("VBoxContainer/FormGrid/NameTextEdit")
DescriptionTextEdit = NodePath("VBoxContainer/FormGrid/DescriptionTextEdit")
mobSelector = NodePath("Sprite_selector")
melee_damage_numedit = NodePath("VBoxContainer/FormGrid/MeleeDamageSpinBox")
melee_range_numedit = NodePath("VBoxContainer/FormGrid/MeleeRangeSpinbox")
health_numedit = NodePath("VBoxContainer/FormGrid/HealthSpinBox")
moveSpeed_numedit = NodePath("VBoxContainer/FormGrid/MoveSpeedSpinBox")
idle_move_speed_numedit = NodePath("VBoxContainer/FormGrid/IdleMoveSpeedSpinBox")
sightRange_numedit = NodePath("VBoxContainer/FormGrid/SightRangeSpinBox")
senseRange_numedit = NodePath("VBoxContainer/FormGrid/SenseRangeSpinbox")
hearingRange_numedit = NodePath("VBoxContainer/FormGrid/HearingRangeSpinbox")
ItemGroupTextEdit = NodePath("VBoxContainer/FormGrid/HBoxContainer/LootItemGroupTextEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="FormGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ImageLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Sprite:"

[node name="MobImageDisplay" type="TextureRect" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.4
texture = ExtResource("2_woy6i")
expand_mode = 3

[node name="PathLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Sprite name"

[node name="PathTextLabel" type="Label" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="IDLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "ID:"

[node name="IDTextLabel" type="Label" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="NameLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Name"

[node name="NameTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
focus_next = NodePath("../DescriptionTextEdit")
focus_previous = NodePath("../MobImageDisplay")
placeholder_text = "Scorpion	"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Description"

[node name="DescriptionTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
focus_next = NodePath("../HealthSpinBox")
focus_previous = NodePath("../NameTextEdit")
placeholder_text = "A very dangerous land animal often found in dry climates"
wrap_mode = 1

[node name="HealthLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Health"

[node name="HealthSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
max_value = 1000.0
value = 100.0

[node name="MeleeDamageLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Melee damage"

[node name="MeleeDamageSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
value = 20.0

[node name="MeleeRangeLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Melee range"

[node name="MeleeRangeSpinbox" type="SpinBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
tooltip_text = "The maximum distance it can reach when attacking in melee"
step = 0.5
value = 1.5

[node name="MoveSpeedLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Move speed"

[node name="MoveSpeedSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
tooltip_text = "The speed at which it moves"
step = 0.1
value = 1.0

[node name="IdleMoveSpeedLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Idle move speed"

[node name="IdleMoveSpeedSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
tooltip_text = "The speed at which it moves when idle"
step = 0.1
value = 0.5

[node name="SightRangeLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Sight range"

[node name="SightRangeSpinBox" type="SpinBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
tooltip_text = "The maximum distance it can visually detect other entities"
max_value = 500.0
value = 200.0

[node name="SenseRangeLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Sense range"

[node name="SenseRangeSpinbox" type="SpinBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
tooltip_text = "The maximum distance at which it can detect entities with senses other then sight and hearing"
value = 50.0

[node name="HearingRangeLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Hearing range"

[node name="HearingRangeSpinbox" type="SpinBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
tooltip_text = "The maximum distance at which it can detect entities trough hearing"
max_value = 5000.0
value = 1000.0

[node name="LootItemGroupLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Loot itemgroup"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/FormGrid"]
layout_mode = 2

[node name="LootItemGroupTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
tooltip_text = "Drag an itemgroup from the list of itemgroups on the left onto this textbox. When this mob dies, it will drop loot from that group. If no group is specified, the mob will not drop any loot"
focus_next = NodePath("../../DescriptionTextEdit")
focus_previous = NodePath("../../MobImageDisplay")
mouse_filter = 1
placeholder_text = "Drop an itemgroup here"
editable = false

[node name="ItemGroupClearButton" type="Button" parent="VBoxContainer/FormGrid/HBoxContainer"]
layout_mode = 2
tooltip_text = "Clears the id of the itemgroup"
text = "Clear itemgroup"

[node name="Sprite_selector" parent="." instance=ExtResource("3_847a0")]
visible = false

[connection signal="button_up" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_button_up"]
[connection signal="gui_input" from="VBoxContainer/FormGrid/MobImageDisplay" to="." method="_on_mob_image_display_gui_input"]
[connection signal="button_up" from="VBoxContainer/FormGrid/HBoxContainer/ItemGroupClearButton" to="." method="_on_item_group_clear_button_button_up"]
[connection signal="sprite_selected_ok" from="Sprite_selector" to="." method="_on_sprite_selector_sprite_selected_ok"]
